fix:sidebar and job info spacing

--- a/app/src/components/JobInfo/JobInfo.module.css
+++ b/app/src/components/JobInfo/JobInfo.module.css
@@ -1,9 +1,11 @@
 .mainJobInfo {
+  box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   padding: 0.25rem 0.1rem;
   width: 100%;
   min-width: 500px;
+  padding: 1rem;
 }
 .job {
   display: flex;
