--- a/app/src/components/Sidebar/Sidebar.module.css
+++ b/app/src/components/Sidebar/Sidebar.module.css
@@ -43,19 +43,18 @@
   padding: 0.5rem 0.25rem;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 .MenuImage {
   height: 2rem;
   width: 2rem;
 }
 .MenuText {
-  margin-left: 0.5rem;
+  margin-left: 1rem;
 }
 .activeList {
   text-decoration: none;
   color: white;
-  width: 98%;
+  width: 90%;
   margin: 0 auto;
   display: block;
   text-align: center;
@@ -67,7 +66,8 @@
   font-weight: 500;
   display: flex;
   align-items: center;
-  justify-content: center;
+  padding: 0.5rem 0.5rem;
+  /* justify-content: center; */
 }
 
 .UserAccount {
@@ -162,6 +162,10 @@
     border-bottom: 2px solid var(--border-blue);
     margin-top: 1rem;
   }
+  .activeList {
+    /* padding: 0; */
+    justify-content: center;
+  }
 
   .appnameMobile h3 {
     text-align: center;
@@ -179,6 +183,9 @@
   }
   .pageList a span {
     display: none;
+  }
+  .pageItem {
+    justify-content: center;
   }
   .MenuImage {
     height: 1.5rem;
